Added release notes and detailed elements which are removed.